--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
     "require": {
         "php" : ">=5.4.0",
-        "container-interop/container-interop": "^1.1"
+        "psr/container": "^1.0"
     },
     "provide": {
-        "container-interop/container-interop-implementation": "^1.1"
+        "psr/container-implementation": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
